// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CarouselSlideUnit (Diamond Snapshot) > Admin modunda aktif slide görünümü snapshot ile eşleşmeli 1`] = `
<DocumentFragment>
  <div
    class="absolute inset-0 transition-opacity duration-700 ease-in-out overflow-hidden rounded-none relative"
  >
    <div
      class="relative w-full h-full"
    >
      <div
        class="relative overflow-hidden bg-stone-100 aspect-[4/3] 
            absolute inset-0 w-full h-full object-cover 
            
          "
      >
        <div
          class="absolute inset-0 z-10 flex items-center justify-center bg-stone-50"
          style="opacity: 1;"
        >
          <div
            class="absolute inset-0 shimmer-animation opacity-50"
          />
          <div
            class="flex flex-col items-center justify-center gap-3 opacity-20"
          >
            <div
              class="
          w-8 h-8 border-3 
          border-stone-200 border-t-stone-800 
          rounded-full
        "
              style="opacity: 0; transform: scale(0.8);"
            />
          </div>
          <div
            class="absolute inset-0 opacity-[0.03] pointer-events-none"
            style="background-image: radial-gradient(rgb(0, 0, 0) 0.5px, transparent 0.5px); background-size: 16px 16px;"
          />
        </div>
        <img
          alt="Test Başlığı"
          class="
            w-full h-full transition-all duration-700 ease-out
            object-cover
            opacity-0 scale-105 blur-sm
          "
          loading="eager"
          src="https://example.com/slide1.jpg"
        />
      </div>
    </div>
    <div
      class="absolute inset-0 pointer-events-none z-[999]"
    >
      <div
        class="absolute top-4 left-4 z-30 pointer-events-auto bg-stone-900 text-white px-3 py-1.5 rounded-[var(--radius-button)] text-[0.5rem] leading-tight font-medium uppercase tracking-wider font-black shadow-xl !top-4 !left-4 !right-auto !pointer-events-auto flex items-center relative w-fit h-fit transition-opacity duration-500 opacity-100"
      >
        <select
          class="absolute inset-0 cursor-pointer z-10 opacity-0"
        >
          <option
            value="0"
          >
            1.
          </option>
          <option
            value="1"
          >
            2.
          </option>
          <option
            value="2"
          >
            3.
          </option>
        </select>
        <span
          class="text-white text-[11px] font-black"
        >
          2.
        </span>
      </div>
      <div
        class="absolute top-4 right-4 !pointer-events-auto transition-opacity duration-500 opacity-100"
        style="opacity: 0; transform: scale(0.8);"
      >
        <button
          class="
        relative inline-flex items-center justify-center transition-all duration-300 font-black uppercase tracking-widest active:scale-95 disabled:opacity-50 disabled:pointer-events-none overflow-hidden 
        bg-red-50 text-red-600 hover:bg-red-600 hover:text-white 
        px-6 py-3 text-xs gap-2 
        rounded-full aspect-square !p-0 
        
        w-8 h-8 shadow-xl border-2 border-white/20
      "
          title="AFİŞİ SİL"
        >
          <div
            class="
          flex items-center justify-center shrink-0 transition-transform duration-300
          
          
        "
          >
            <div
              class="w-3.5 h-3.5"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-trash2 lucide-trash-2 w-full h-full p-0.5"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2.5"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M10 11v6"
                />
                <path
                  d="M14 11v6"
                />
                <path
                  d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6"
                />
                <path
                  d="M3 6h18"
                />
                <path
                  d="M8 6V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"
                />
              </svg>
            </div>
          </div>
        </button>
      </div>
    </div>
    <div
      class="absolute inset-0 z-20 cursor-pointer group"
    >
      <input
        accept="image/*"
        class="absolute inset-0 opacity-0 cursor-pointer z-30"
        type="file"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`CarouselSlideUnit (Diamond Snapshot) > Aktif slide görünümü snapshot ile eşleşmeli 1`] = `
<DocumentFragment>
  <div
    class="absolute inset-0 transition-opacity duration-700 ease-in-out overflow-hidden rounded-none relative"
  >
    <div
      class="relative w-full h-full"
    >
      <div
        class="relative overflow-hidden bg-stone-100 aspect-[4/3] 
            absolute inset-0 w-full h-full object-cover 
            
          "
      >
        <div
          class="absolute inset-0 z-10 flex items-center justify-center bg-stone-50"
          style="opacity: 1;"
        >
          <div
            class="absolute inset-0 shimmer-animation opacity-50"
          />
          <div
            class="flex flex-col items-center justify-center gap-3 opacity-20"
          >
            <div
              class="
          w-8 h-8 border-3 
          border-stone-200 border-t-stone-800 
          rounded-full
        "
              style="opacity: 0; transform: scale(0.8);"
            />
          </div>
          <div
            class="absolute inset-0 opacity-[0.03] pointer-events-none"
            style="background-image: radial-gradient(rgb(0, 0, 0) 0.5px, transparent 0.5px); background-size: 16px 16px;"
          />
        </div>
        <img
          alt="Test Başlığı"
          class="
            w-full h-full transition-all duration-700 ease-out
            object-cover
            opacity-0 scale-105 blur-sm
          "
          loading="eager"
          src="https://example.com/slide1.jpg"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CarouselSlideUnit (Diamond Snapshot) > Pasif (Ghost) slide görünümü snapshot ile eşleşmeli 1`] = `
<DocumentFragment>
  <div
    class="absolute inset-0 transition-opacity duration-700 ease-in-out overflow-hidden rounded-none relative"
  >
    <div
      class="relative w-full h-full"
    >
      <div
        class="relative overflow-hidden bg-stone-100 aspect-[4/3] 
            absolute inset-0 w-full h-full object-cover 
            
          "
      >
        <div
          class="absolute inset-0 z-10 flex items-center justify-center bg-stone-50"
          style="opacity: 1;"
        >
          <div
            class="absolute inset-0 shimmer-animation opacity-50"
          />
          <div
            class="flex flex-col items-center justify-center gap-3 opacity-20"
          >
            <div
              class="
          w-8 h-8 border-3 
          border-stone-200 border-t-stone-800 
          rounded-full
        "
              style="opacity: 0; transform: scale(0.8);"
            />
          </div>
          <div
            class="absolute inset-0 opacity-[0.03] pointer-events-none"
            style="background-image: radial-gradient(rgb(0, 0, 0) 0.5px, transparent 0.5px); background-size: 16px 16px;"
          />
        </div>
        <img
          alt="Test Başlığı"
          class="
            w-full h-full transition-all duration-700 ease-out
            object-cover
            opacity-0 scale-105 blur-sm
          "
          loading="eager"
          src="https://example.com/slide1.jpg"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;
